--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,54 @@
+body {
+	margin: 0px;
+	padding: 0px;
+	background-color: skyblue;
 
+	display: flex;
+	flex-flow: column nowrap;
+	align-items: center;
+}
 
+section {
+	display: block;
+	min-height: 100vh;
+	width: 100%;
+	margin: 0px;
+	border: 0px;
+	padding: 0px;
+	background-color: powderblue;
+}
+
+@media screen and (min-width: 530px) {
+	section {
+/*		margin: 0px auto;*/
+		width: 90%;
+	}
+}
+
+@media screen and (min-width: 640px) {
+	section {
+/*		margin: 0px auto;*/
+		width: 75%;
+	}
+}
+
+section > h1,h2 {
+	text-align: center;
+}
+
+.gallery-selection {
+	min-height: calc(100vh - 200px);
+	background-color: lightsalmon;
+}
+
+.gallery {
+	display: flex;
+	flex-flow: row nowrap;
+	overflow-x: scroll;
+}
+
+.gallery > img {
+	object-fit: contain;
+	max-height: 150px;
+	margin: 5px;
+}
