--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,8 @@ body {
 }
 
 section {
-	display: block;
+	display: flex;
+	flex-flow: column nowrap;
 	min-height: 100vh;
 	width: 100%;
 	margin: 0px;
@@ -51,4 +52,8 @@ section > h1,h2 {
 	object-fit: contain;
 	max-height: 150px;
 	margin: 5px;
+}
+
+iframe {
+	flex-grow: 1;
 }
