--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,8 @@ section > h1,h2 {
 
 .gallery {
 	display: flex;
-	flex-flow: row nowrap;
+	flex-direction: row;
+	flex-wrap: nowrap;
 	overflow-x: scroll;
 }
 .gallery > a > img {
@@ -67,16 +68,49 @@ section > h1,h2 {
 .gallery-selection {
 	flex-grow: 1;
 	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
 	justify-content: center;
-	/*align-items: center;*/
-	max-height: 100%;
+	align-items: stretch;
+	/*debug*/
+/*	background-color: red;*/
 }
 .gallery-selection > div {
 	display: none;
-	background-color: lightsalmon;
 }
 .gallery-selection > div:target {
-	display: block;
+	max-width: 100%;
+	max-height: 100%;
+	flex-grow: 1;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	position: relative;
+	z-index: 0;
+	/*debug*/
+/*	background-color: green;*/
+}
+.gallery-selection > div > img {
+	max-width: 100%;
+	max-height: 100%;
+	object-fit: contain;
+	position: absolute;
+	z-index: -1;
+	/*debug*/
+/*	background-color: blue;*/
+/*	opacity: 0.5;*/
+}
+.gallery-selection > div > div {
+	flex-grow: 1;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: flex-end;
+	align-items: center;
+	/*debug*/
+/*	background-color: lightblue;*/
 }
 
 iframe {
