--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,9 @@ body {
 	display: flex;
 	flex-flow: column nowrap;
 	align-items: center;
+
+	color: #AE7340;
+	text-shadow: 0px 0px 5px #FFFFFF, 2px 2px 5px #FFFFFF;
 }
 
 section {
@@ -47,6 +50,7 @@ section > h1,h2 {
 		max-width: 2082px;
 		max-height: 2223px;
 		color: transparent;
+		text-shadow: none;
 		user-select: none;
 	}
 }
@@ -120,10 +124,24 @@ a.lightbox {
 	align-items: center;
 }
 
-iframe {
-	flex-grow: 1;
-	/*
-	width: 640px;
-	height: 480px;
-	*/
+#maps {
+	display: grid;
+	column-gap: 1em;
+	grid-auto-flow: column;
+	grid-template-columns: 100%;
+	grid-template-rows: max-content max-content auto max-content max-content auto;
+}
+@media screen and (min-width: 900px) {
+	#maps {
+		grid-template-columns: 50% 50%;
+		grid-template-rows: max-content max-content auto;
+	}
+}
+
+#maps > iframe {
+	width: 90%;
+	height: 90%;
+	margin: auto;
+	border-radius: 5px;
+	box-shadow: 0 0 0 3px white, 0 5px 8px 3px rgba(0, 0, 0, 0.6);
 }
