--- a/styles.css
+++ b/styles.css
@@ -97,27 +97,27 @@ section > h1,h2 {
 	justify-content: space-between;
 	overflow: auto;
 }
-.gallery > a {
-	text-decoration: none;
-	margin: 4px 11px 16px 4px;
-}
-.gallery > a > img {
-/*	max-height: 150px;*/
+.gallery > img {
 	max-height: min(40vw, 400px);
 	object-fit: contain;
 	border-radius: 5px;
 	overflow: hidden;
 	box-shadow: 0 0 0 3px white, 0 5px 8px 3px rgba(0, 0, 0, 0.6);
+	margin: 4px 11px 16px 4px;
+	cursor: pointer;
 }
 
 .lightbox {
 	display: none;
 }
-a.lightbox {
+#lightbox {
+	display: none;
+}
+a#lightbox {
 	text-decoration: none;
 	color: inherit;
 }
-.lightbox:target {
+#lightbox.visible {
 	position: fixed;
 	background: rgba(0, 0, 0, 0.5);
 	backdrop-filter: blur(10px);
@@ -134,8 +134,9 @@ a.lightbox {
 	align-items: center;
 	z-index: 0;
 	box-sizing: border-box;
+	cursor: pointer;
 }
-.lightbox > picture {
+#lightbox > picture {
 	display: flex;
 	max-width: 100%;
 	max-height: 100%;
@@ -146,12 +147,12 @@ a.lightbox {
 	box-shadow: 0 0 0 3px white, 0 5px 8px 3px rgba(0, 0, 0, 0.6);
 	box-sizing: border-box;
 }
-.lightbox > picture > img {
+#lightbox > picture > img {
 	max-width: 100%;
 	max-height: 100%;
 	object-fit: cover;
 }
-.lightbox > div {
+#lightbox > div {
 	flex-grow: 1;
 	display: flex;
 	flex-direction: column;
