--- a/styles.css
+++ b/styles.css
@@ -114,10 +114,6 @@ section > h1,h2 {
 #lightbox {
 	display: none;
 }
-a#lightbox {
-	text-decoration: none;
-	color: inherit;
-}
 #lightbox.visible {
 	position: fixed;
 	background: rgba(0, 0, 0, 0.5);
@@ -129,37 +125,27 @@ a#lightbox {
 	top: 0;
 	padding: 80px;
 	display: flex;
-	flex-direction: column;
-	flex-wrap: nowrap;
+	flex-flow: column nowrap;
 	justify-content: center;
 	align-items: center;
-	z-index: 0;
 	box-sizing: border-box;
 	cursor: pointer;
+	color: white;
 }
 #lightbox > picture {
-	display: flex;
 	max-width: 100%;
 	max-height: 100%;
-	position: absolute;
-	z-index: -1;
-	border-radius: 5px;
-	overflow: hidden;
-	box-shadow: 0 0 0 3px white, 0 5px 8px 3px rgba(0, 0, 0, 0.6);
-	box-sizing: border-box;
+	display: flex;
+	flex-flow: column nowrap;
+	align-items: center;
+	justify-content: center;
 }
 #lightbox > picture > img {
 	max-width: 100%;
 	max-height: 100%;
+	border-radius: 5px;
+	box-shadow: 0 0 0 3px white, 0 5px 8px 3px rgba(0, 0, 0, 0.6);
 	object-fit: cover;
-}
-#lightbox > div {
-	flex-grow: 1;
-	display: flex;
-	flex-direction: column;
-	flex-wrap: nowrap;
-	justify-content: flex-end;
-	align-items: center;
 }
 
 #info {
