Add nicer story and some tweaks

--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,10 @@ section > h1,h2 {
 	flex-flow: column nowrap;
 	align-items: center;
 }
+#story em {
+	text-transform: uppercase;
+	font-style: normal;
+}
 .gallery {
 	max-width: var(--max-content-width);
 	display: flex;
